--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
   "name": "pizza-cat",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "description": "An MV_ CMS framework",
   "private": true,
+  "main": "app.js",
   "scripts": {
     "start": "node ./bin/www"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lumberjackchef/pizza-cat.git"
+  },
   "author": "Ryan Pearson",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/lumberjackchef/pizza-cat/issues"
+  },
+  "homepage": "https://github.com/lumberjackchef/pizza-cat#readme",
   "dependencies": {
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
